Updated junit in pom.xml