@@ -22,12 +22,12 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.6.1</version>
+            <version>[5.6.1, )</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.6.2</version>
+            <version>[5.6.2, )</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -70,9 +70,9 @@
                     <release>14</release>
                     <source>14</source>
                     <target>14</target>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
+                    <!--<compilerArgs>
+                        <arg><-enable-preview</arg>
+                    </compilerArgs>-->
                     <forceJavacCompilerUse>true</forceJavacCompilerUse>
                     <parameters>true</parameters>
                 </configuration>
